# iasql

./: .develop.sh  .dockerignore  .drop.sh  .gitattributes  .gitignore  .module_migration.sh  .prepare.sh  .prerelease.sh  .prettierignore  .prettierrc  .release.sh  .version.sh  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.debug  Dockerfile.dev  LICENSE  README.md  dbdoc-ci.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.debug.sh  docker-entrypoint.sh  index.html  jest-environment-fail-fast.js  jest.config.js  opensearch.xml  ormconfig-metadata.js  ormconfig.js  ormconfig.json  ormconfig.ts  package.json  sitemap.xml  test.env  tsconfig.json  tslint.json
.github/: dependabot.yml
blog/: atom.xml  index.html  rss.xml
cli/: .gitattributes  .gitignore  .rustfmt.toml  .version.sh  Cargo.toml  Makefile  README.md
cli/src/: lib.rs  main.rs
cli/src/api/: db.rs  mod.rs  module.rs
cli/src/auth/: mod.rs
cli/src/dialoguer/: mod.rs  theme.rs
cli/src/http/: mod.rs
dashboard/: .gitignore  .prettierrc  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tslint.json
docs/: .gitattributes  README.md  docusaurus.config.js  index.html  package.json  telemetry.js  versions.json
engine/: .dockerignore  .gitignore  .module_migration.sh  Dockerfile  README.md  build-and-push.sh  deploy-ci.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  iasql-on-iasql.sh  iasql-on-iasql.sql  jest.config.js  package.json  (+2 more)
(+6245 files in other folders)
