[package]
name = "iasql"
description = "Infrastructure as SQL"
homepage = "https://iasql.com"
version = "0.2.1"
edition = "2018"

[dependencies]
ascii_table = "3.0"
clap = "2.33.1"
dialoguer = "0.8.0"
futures = "0.3.18"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "server"] }
hyper-tls = "0.5" # needed for HTTPS w/ hyper
indicatif = "0.15.0"
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_ini = { version = "0.2" }
serde_json = { version = "1.0" }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "time"] }
webbrowser = "0.5.5"
